solve SonarQube recommendations