@@ -5,7 +5,6 @@ import drinkshop.repository.Repository;
 import drinkshop.service.validator.ProductValidator;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Calls the validator on every mutation (defect A04).
@@ -52,7 +51,7 @@ public class ProductService {
         if (categorie == null) return getAllProducts();
         return getAllProducts().stream()
                 .filter(p -> p.getCategorie().getId() == categorie.getId())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /** Pass {@code null} to retrieve all products (replaces old ALL sentinel). */
@@ -60,7 +59,7 @@ public class ProductService {
         if (tip == null) return getAllProducts();
         return getAllProducts().stream()
                 .filter(p -> p.getTip().getId() == tip.getId())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public int nextId() {
